📖 Complete README with comprehensive installation and build instructions
- Add detailed Flutter SDK installation for macOS, Windows, Linux
- Include Android Studio setup with SDK requirements
- Add step-by-step project setup and running instructions
- Include production build guide (APK/AAB) with optimization
- Add Google Play Store deployment instructions
- Include troubleshooting and performance tips
- Add testing guidelines and development notes
- Complete coverage from installation to deployment